userfriendlyscience NEWS
------------------------

0.6-2 2017-
* Added logRegr for logistic analysis
* Added fanova as flexible anova wrapper for simple anova's
* Added collinearity diagnostic to regr and logRegr
* Added userfriendly plotting to regr, fanova and logRegr
* Added sharedSubString to find the longest shared substring is a character vector
* Added findShortestInterval to find the shortest interval in a numeric vector
* Added checkDataIntegrity for easy checking of data integrity
* Improved nnc to compute confidence intervals using formula from 
* Added confIntProp for easily computing confidence intervals for proportions
* Added ggProportionPlot to generate a plot for proportions acknowledging inaccuracy of sample estimates
* At the request of Dorota Reis (through Twitter, @dororeis), made it easy to change the colors in dlvPlot()
* In CIBER, it's now possible to number the subquestions

0.6-1 2017-05-09
* Added support for Cohen's d diamond plots
* Added function for confidence curves
* Fixed measurement level related bug in associationMatrix
* Added processLimeSurveyDropouts
* Minor improvements in CIBER
* Added possibility to easily reset counter for caption

0.6-0 2017-04-01
* Added CIBER for Confidence Interval-Based Estimation of Relevance
* Added a number of diamond plot functions (biAxisDiamondPlot, associationsDiamondPlot) and supporting functions (varsToDiamondPlotDf, associationsToDiamondPlotDf, rawDataDiamondLayer)
* Added pwr.randomizationSuccess
* Small improvements to cohensdCI and pwr.cohensdCI
* Added confIntR and pwr.confIntR based on the Moinester & Gottfried (2014) and
  the Bonett (2011) papers (with permission)
* Added determinant structure specification functions (determinantStructure, determinantVar, subdeterminants, subdeterminantProducts)
* Added determinant structure processing functions (detStructAddVarNames, detStructAddVarLabels, detStructComputeProducts, detStructComputeScales, detStructCIBER)