@@ -19,6 +19,7 @@ Description: Contains a number of functions that serve
 URL: http://userfriendlyscience.com
 Imports: DiagrammeR, GGally, GPArotation, MASS, MBESS, RColorBrewer,
          SCRT, SuppDists, XML, car, data.tree, diptest, fBasics,
-         ggplot2, ggrepel, gridExtra, gtable, knitr, lavaan, lme4,
-         mosaic, pander, plyr, psych, pwr, rio, scales, viridis,
-         xtable, minpack.lm, BiasedUrn
+         ggplot2, ggrepel, ggridges, gridExtra, gtable, knitr,
+         lavaan, lme4, mosaic, pander, plyr, psych, pwr, rio,
+         scales, viridis, xtable, minpack.lm, BiasedUrn, digest,
+         
