@@ -2,6 +2,11 @@ userfriendlyscience NEWS
 ------------------------
 
 0.6-2 2017-
+* Added multiResponse
+* Added ggEasyRidge
+* Added ggEasyBar
+* Added knitFig
+* Added multiVarFreq
 * Added logRegr for logistic analysis
 * Added fanova as flexible anova wrapper for simple anova's
 * Added collinearity diagnostic to regr and logRegr
